# exozora-core

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ONBOARDING.md
docs/rfc/: 0001-core-architecture.md
scripts/: bootstrap.sh
src/: main.rs
src/core/: approved.rs  mod.rs  plan.rs  task.rs
src/executor/: mod.rs
src/planner/: mod.rs
src/policy/: command_rules.rs  mod.rs  path_rules.rs  validator.rs
src/utils/: mod.rs
tests/: stress_tests.rs
